// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar test suites > render normally when body has class horizontal 1`] = `
<DocumentFragment>
  <body
    class="horizontal"
  >
    <div
      class="main-content"
    >
      Hello
    </div>
    <div
      class="sticky"
    >
      <aside
        class="app-sidebar "
      >
        <div
          class="scrollbar-container hor-scroll ps"
        >
          <div
            class="main-sidebar-header active"
          >
            <a
              class="header-logo active"
              href="/dashboard/dashboard1/"
            >
              <img
                alt="logo"
                class="main-logo  desktop-logo"
                src="/src/assets/img/brand/logo.png"
              />
              <img
                alt="logo"
                class="main-logo  desktop-dark"
                src="/src/assets/img/brand/logo-white.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-logo"
                src="/src/assets/img/brand/favicon.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-dark"
                src="/src/assets/img/brand/favicon-white.png"
              />
            </a>
          </div>
          <div
            class="main-sidemenu"
          >
            <div
              class="slide-left disabled"
              id="slide-left"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                />
              </svg>
            </div>
            <ul
              class="side-menu"
            >
              <li
                class="side-item side-item-category"
              >
                TempPage
              </li>
              <li
                class="slide   "
              >
                <a
                  class="side-menu__item "
                  href="/temp-page/"
                >
                  <svg
                    class="side-menu__icon"
                    fill="#000000"
                    version="1.1"
                    viewBox="0 0 48 48"
                    x="24"
                    xmlns="http://www.w3.org/2000/svg"
                    y="24"
                  >
                    <g>
                      <path
                        d="M27.81,40.57c-1.95,0.45-4.04,0.56-6.18,0.27C14.09,39.8,8.05,33.67,7.13,26.12C5.79,15.09,15.09,5.79,26.11,7.13   c7.55,0.92,13.68,6.96,14.72,14.49c0.3,2.15,0.18,4.23-0.27,6.18C40.43,28.42,40.9,29,41.53,29h0c0.46,0,0.86-0.31,0.97-0.75   C42.82,26.88,43,25.46,43,24c0-11.19-9.73-20.16-21.17-18.88c-8.7,0.97-15.74,8-16.71,16.71C3.84,33.27,12.81,43,24,43   c1.46,0,2.88-0.18,4.25-0.5c0.44-0.1,0.75-0.51,0.75-0.97v0C29,40.9,28.42,40.43,27.81,40.57z"
                      />
                      <path
                        d="M19.04,32.96c-0.34,0-0.68-0.09-1-0.27c-0.63-0.36-1-1.01-1-1.73V17.04c0-0.72,0.38-1.37,1-1.73   c0.63-0.36,1.38-0.36,2,0.01l11.93,6.96c0,0,0,0,0,0c0.62,0.36,0.99,1.01,0.99,1.73s-0.37,1.36-0.99,1.73l-11.93,6.96   C19.73,32.87,19.38,32.96,19.04,32.96z M19.04,17.04v13.92L30.96,24l0.5-0.86L30.96,24L19.04,17.04z"
                      />
                      <g>
                        <g>
                          <path
                            d="M31,41.23c-0.14,0-0.28-0.05-0.39-0.16c-0.22-0.22-0.22-0.57,0-0.78l1.57-1.57c0.22-0.22,0.57-0.22,0.78,0     c0.22,0.22,0.22,0.57,0,0.78l-1.57,1.57C31.28,41.18,31.14,41.23,31,41.23z"
                          />
                          <path
                            d="M32.56,42.8c-0.14,0-0.28-0.05-0.39-0.16l-1.57-1.57c-0.22-0.22-0.22-0.57,0-0.78s0.57-0.22,0.78,0l1.57,1.57     c0.22,0.22,0.22,0.57,0,0.78C32.85,42.75,32.71,42.8,32.56,42.8z"
                          />
                        </g>
                        <path
                          d="M31,36.8v-3.32h9.98v-1.11H30.44c-0.31,0-0.55,0.25-0.55,0.55v3.88c0,0.31,0.25,0.55,0.55,0.55h0    C30.75,37.36,31,37.11,31,36.8z"
                        />
                        <path
                          d="M40.97,36.82v3.31H31v1.11h10.53c0.31,0,0.55-0.25,0.55-0.55v-3.86c0-0.31-0.25-0.55-0.55-0.55h0    C41.22,36.26,40.97,36.51,40.97,36.82z"
                        />
                        <g>
                          <path
                            d="M39.41,35.04c-0.14,0-0.28-0.05-0.39-0.16c-0.22-0.22-0.22-0.57,0-0.78l1.57-1.57c0.22-0.22,0.57-0.22,0.78,0     s0.22,0.57,0,0.78l-1.57,1.57C39.69,34.99,39.55,35.04,39.41,35.04z"
                          />
                          <path
                            d="M40.97,33.48c-0.14,0-0.28-0.05-0.39-0.16l-1.57-1.57c-0.22-0.22-0.22-0.57,0-0.78c0.22-0.22,0.57-0.22,0.78,0l1.57,1.57     c0.22,0.22,0.22,0.57,0,0.78C41.26,33.42,41.12,33.48,40.97,33.48z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                  <span
                    class="side-menu__label"
                  >
                    Temp page
                  </span>
                </a>
              </li>
            </ul>
            <div
              class="slide-right"
              id="slide-right"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                />
              </svg>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </aside>
    </div>
  </body>
</DocumentFragment>
`;

exports[`Sidebar test suites > render normally when body has not class horizontal 1`] = `
<DocumentFragment>
  <body>
    <div
      class="main-content"
    >
      Hello
    </div>
    <div
      class="sticky"
    >
      <aside
        class="app-sidebar "
      >
        <div
          class="scrollbar-container hor-scroll ps"
        >
          <div
            class="main-sidebar-header active"
          >
            <a
              class="header-logo active"
              href="/dashboard/dashboard1/"
            >
              <img
                alt="logo"
                class="main-logo  desktop-logo"
                src="/src/assets/img/brand/logo.png"
              />
              <img
                alt="logo"
                class="main-logo  desktop-dark"
                src="/src/assets/img/brand/logo-white.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-logo"
                src="/src/assets/img/brand/favicon.png"
              />
              <img
                alt="logo"
                class="main-logo  mobile-dark"
                src="/src/assets/img/brand/favicon-white.png"
              />
            </a>
          </div>
          <div
            class="main-sidemenu"
          >
            <div
              class="slide-left disabled"
              id="slide-left"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                />
              </svg>
            </div>
            <ul
              class="side-menu"
            >
              <li
                class="side-item side-item-category"
              >
                TempPage
              </li>
              <li
                class="slide   "
              >
                <a
                  class="side-menu__item "
                  href="/temp-page/"
                >
                  <svg
                    class="side-menu__icon"
                    fill="#000000"
                    version="1.1"
                    viewBox="0 0 48 48"
                    x="24"
                    xmlns="http://www.w3.org/2000/svg"
                    y="24"
                  >
                    <g>
                      <path
                        d="M27.81,40.57c-1.95,0.45-4.04,0.56-6.18,0.27C14.09,39.8,8.05,33.67,7.13,26.12C5.79,15.09,15.09,5.79,26.11,7.13   c7.55,0.92,13.68,6.96,14.72,14.49c0.3,2.15,0.18,4.23-0.27,6.18C40.43,28.42,40.9,29,41.53,29h0c0.46,0,0.86-0.31,0.97-0.75   C42.82,26.88,43,25.46,43,24c0-11.19-9.73-20.16-21.17-18.88c-8.7,0.97-15.74,8-16.71,16.71C3.84,33.27,12.81,43,24,43   c1.46,0,2.88-0.18,4.25-0.5c0.44-0.1,0.75-0.51,0.75-0.97v0C29,40.9,28.42,40.43,27.81,40.57z"
                      />
                      <path
                        d="M19.04,32.96c-0.34,0-0.68-0.09-1-0.27c-0.63-0.36-1-1.01-1-1.73V17.04c0-0.72,0.38-1.37,1-1.73   c0.63-0.36,1.38-0.36,2,0.01l11.93,6.96c0,0,0,0,0,0c0.62,0.36,0.99,1.01,0.99,1.73s-0.37,1.36-0.99,1.73l-11.93,6.96   C19.73,32.87,19.38,32.96,19.04,32.96z M19.04,17.04v13.92L30.96,24l0.5-0.86L30.96,24L19.04,17.04z"
                      />
                      <g>
                        <g>
                          <path
                            d="M31,41.23c-0.14,0-0.28-0.05-0.39-0.16c-0.22-0.22-0.22-0.57,0-0.78l1.57-1.57c0.22-0.22,0.57-0.22,0.78,0     c0.22,0.22,0.22,0.57,0,0.78l-1.57,1.57C31.28,41.18,31.14,41.23,31,41.23z"
                          />
                          <path
                            d="M32.56,42.8c-0.14,0-0.28-0.05-0.39-0.16l-1.57-1.57c-0.22-0.22-0.22-0.57,0-0.78s0.57-0.22,0.78,0l1.57,1.57     c0.22,0.22,0.22,0.57,0,0.78C32.85,42.75,32.71,42.8,32.56,42.8z"
                          />
                        </g>
                        <path
                          d="M31,36.8v-3.32h9.98v-1.11H30.44c-0.31,0-0.55,0.25-0.55,0.55v3.88c0,0.31,0.25,0.55,0.55,0.55h0    C30.75,37.36,31,37.11,31,36.8z"
                        />
                        <path
                          d="M40.97,36.82v3.31H31v1.11h10.53c0.31,0,0.55-0.25,0.55-0.55v-3.86c0-0.31-0.25-0.55-0.55-0.55h0    C41.22,36.26,40.97,36.51,40.97,36.82z"
                        />
                        <g>
                          <path
                            d="M39.41,35.04c-0.14,0-0.28-0.05-0.39-0.16c-0.22-0.22-0.22-0.57,0-0.78l1.57-1.57c0.22-0.22,0.57-0.22,0.78,0     s0.22,0.57,0,0.78l-1.57,1.57C39.69,34.99,39.55,35.04,39.41,35.04z"
                          />
                          <path
                            d="M40.97,33.48c-0.14,0-0.28-0.05-0.39-0.16l-1.57-1.57c-0.22-0.22-0.22-0.57,0-0.78c0.22-0.22,0.57-0.22,0.78,0l1.57,1.57     c0.22,0.22,0.22,0.57,0,0.78C41.26,33.42,41.12,33.48,40.97,33.48z"
                          />
                        </g>
                      </g>
                    </g>
                  </svg>
                  <span
                    class="side-menu__label"
                  >
                    Temp page
                  </span>
                </a>
              </li>
            </ul>
            <div
              class="slide-right"
              id="slide-right"
            >
              <svg
                fill="#7b8191"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                />
              </svg>
            </div>
          </div>
          <div
            class="ps__rail-x"
            style="left: 0px; top: 0px;"
          >
            <div
              class="ps__thumb-x"
              style="left: 0px; width: 0px;"
              tabindex="0"
            />
          </div>
          <div
            class="ps__rail-y"
            style="top: 0px; left: 0px;"
          >
            <div
              class="ps__thumb-y"
              style="top: 0px; height: 0px;"
              tabindex="0"
            />
          </div>
        </div>
      </aside>
    </div>
  </body>
</DocumentFragment>
`;
